<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_name"
            style="@style/AppTheme.Register.Texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_name"
                android:hint="@string/txt_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="100"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_email"
            style="@style/AppTheme.Register.Texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_email"
                android:hint="@string/txt_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="100"
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_phone_number"
            style="@style/AppTheme.Register.Texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<cardmanager.ciandt.com.cardmanager.presentation.tags.PhoneEditText-->
            <EditText
                android:id="@+id/txt_phone_number"
                android:hint="@string/txt_phone_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="11"

            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textinputlayout_card_number"
            style="@style/AppTheme.Register.Texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_card_number"
                android:hint="@string/txt_card_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="20"
            />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_open_cam"
            android:text="@string/btn_open_cam_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Register.Buttons"
            android:background="@drawable/rounded_corner"
        />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            >
            <CheckBox
                android:id="@+id/chk_accept_terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Register.CheckBox"
                android:layout_marginBottom="18dp"
             />

            <Button
                android:id="@+id/btn_register"
                android:text="@string/btn_register_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Register.Buttons"
                android:background="@drawable/rounded_corner"
             />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
