<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_schedule_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_background_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/schedule_layout_txt_account_name"
                style="@style/AppTheme.Register.Texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/schedule_txt_account_name"
                    android:hint="@string/schedule_txt_account_name_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:maxLength="100"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/schedule_layout_txt_account_date"
                style="@style/AppTheme.Register.Texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/schedule_txt_account_date"
                    android:hint="@string/schedule_txt_account_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/schedule_layout_txt_account_code_barres"
                style="@style/AppTheme.Register.Texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/schedule_txt_account_code_barres"
                    android:hint="@string/schedule_txt_account_code_barres_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11"

                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/schedule_btn_open_cam"
                android:text="@string/schedule_btn_open_cam_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Register.Buttons"
                android:background="@drawable/rounded_corner"
                />
        </LinearLayout>


        <Button
            android:id="@+id/schedule_btn_schedule"
            android:text="@string/schedule_btn_schedule_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Register.Buttons"
            android:background="@drawable/rounded_corner"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="190dp"
            android:tint="@android:color/white"
            android:src="@android:drawable/ic_input_add"
            />
    </LinearLayout>
</ScrollView>
