<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin_large"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginBottom="8dp"
        >
            <ImageView
                android:src="@drawable/ico_agendar"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
            />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_limit_date_text"
                />

                <TextView
                    android:id="@+id/card_txt_expire_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginBottom="8dp"
            >
            <ImageView
                android:src="@drawable/ico_limite"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_limit_avaiable_text"
                    />

                <TextView
                    android:id="@+id/card_txt_limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginBottom="8dp"
            >
            <ImageView
                android:src="@drawable/ico_fatura"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_current_debit_value_text"
                    />

                <TextView
                    android:id="@+id/card_txt_current_debit_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>